--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Bernardo Oyervides
 email: bernardo.oyervides17@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-Personal website for Bernardo Oyervides, computer science student at Lawrence University
+"Personal website for Bernardo Oyervides, computer science student at Lawrence University"
 twitter_username:
 github_username: Blink1702
 minimal_mistakes_skin: default
