--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Bernardo Oyervides
 email: bernardo.oyervides17@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-"Personal website for Bernardo Oyervides, computer science student at Lawrence University"
+description:  Personal website for Bernardo Oyervides, computer science student at Lawrence University
 twitter_username:
 github_username: Blink1702
 minimal_mistakes_skin: default
