--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: bernardo.oyervides17@gmail.com
 description:  Personal website for Bernardo Oyervides, computer science student at Lawrence University
 twitter_username:
 github_username: Blink1702
-minimal_mistakes_skin: default
+minimal_mistakes_skin: neon
 search: true
 
 # Build settings
