--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ plugins:
 author:
   name   : "Bernardo Oyervides"
   avatar : "/assets/images/Bernardo-LawrenceID-Photo.jpg"
-  bio    : "Student at Lawrence University studying Computer Science"
+  bio    : "Student at Lawrence University majoring in Computer Science"
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
@@ -66,7 +66,7 @@ author:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/bernsoyer"
     - label: "HandShake"
-      icon: "fa-light fa-handshake-angle"
+      icon: "fab fa-fw fa-light fa-handshake-angle"
       url: "https://app.joinhandshake.com/stu/users/33236051"
 
 footer:
@@ -78,7 +78,7 @@ footer:
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/"
     - label: "HandShake"
-      icon: "fa-light fa-handshake-angle"
+      icon: "fab fa-fw fa-light fa-handshake-angle"
       url: "https://app.joinhandshake.com/stu/users/33236051"
 
 defaults:
