--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
 
 category_archive:
   type: liquid
