--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,18 @@ footer:
       url: "https://app.joinhandshake.com/stu/users/33236051"
 
 defaults:
-  # _pages
+    # _posts
+  - scope:
+      path: "_pages/project.md"
+     type: pages
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      # _pages
   - scope:
       path: "_pages"
       type: pages
