--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,16 @@ footer:
       url: "https://app.joinhandshake.com/stu/users/33236051"
 
 defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
       # _pages
   - scope:
       path: "_pages"
